--- a/csync/CMakeLists.txt
+++ b/csync/CMakeLists.txt
@@ -1,16 +1,12 @@
-
-
 # global needed variables
 set(APPLICATION_NAME "ocsync")
+set(APPLICATION_VERSION_MAJOR ${MIRALL_VERSION_MAJOR})
+set(APPLICATION_VERSION_MINOR ${MIRALL_VERSION_MINOR})
+set(APPLICATION_VERSION_PATCH ${MIRALL_VERSION_PATCH})
+set(APPLICATION_VERSION ${MIRALL_VERSION})
 
-set(APPLICATION_VERSION_MAJOR "0")
-set(APPLICATION_VERSION_MINOR "91")
-set(APPLICATION_VERSION_PATCH "5")
-
-set(APPLICATION_VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}")
-
-set(LIBRARY_VERSION "0.2.1")
-set(LIBRARY_SOVERSION "0")
+set(LIBRARY_VERSION ${MIRALL_VERSION})
+set(LIBRARY_SOVERSION ${MIRALL_SOVERSION})
 
 # add definitions
 include(DefineCMakeDefaults)
