--- a/csync/tests/CMakeLists.txt
+++ b/csync/tests/CMakeLists.txt
@@ -15,7 +15,7 @@ include_directories(${CHECK_INCLUDE_DIRS})
 add_library(${TORTURE_LIBRARY} STATIC torture.c cmdline.c)
 target_link_libraries(${TORTURE_LIBRARY} ${CMOCKA_LIBRARIES} ${CSYNC_LIBRARY} ${CSTDLIB_LIBRARY})
 
-set(TEST_TARGET_LIBRARIES ${TORTURE_LIBRARY})
+set(TEST_TARGET_LIBRARIES ${TORTURE_LIBRARY} ${SQLITE3_LIBRARIES})
 
 # create tests
 
