export ocsync INCLUDE_DIRS

--- a/csync/src/CMakeLists.txt
+++ b/csync/src/CMakeLists.txt
@@ -3,14 +3,14 @@ project(libcsync)
 add_subdirectory(std)
 add_subdirectory(httpbf)
 
-set(CSYNC_PUBLIC_INCLUDE_DIRS
+set(CSYNC_SRC_PUBLIC_INCLUDE_DIRS
   ${CMAKE_CURRENT_BINARY_DIR}
   ${CMAKE_CURRENT_SOURCE_DIR}
   ${CMAKE_SOURCE_DIR}
-  CACHE INTERNAL "csync public include directories"
+  CACHE INTERNAL "csync public src include directories"
 )
 
-set(CSYNC_PRIVATE_INCLUDE_DIRS
+set(CSYNC_SRC_PRIVATE_INCLUDE_DIRS
   ${SQLITE3_INCLUDE_DIRS}
   ${CSTDLIB_PUBLIC_INCLUDE_DIRS}
   ${HTTPBF_PUBLIC_INCLUDE_DIRS}
@@ -32,7 +32,7 @@ set(CSYNC_LINK_LIBRARIES
 )
 
 if(HAVE_ICONV AND WITH_ICONV)
-    list(APPEND CSYNC_PRIVATE_INCLUDE_DIRS ${ICONV_INCLUDE_DIR})
+    list(APPEND CSYNC_SRC_PRIVATE_INCLUDE_DIRS ${ICONV_INCLUDE_DIR})
     list(APPEND CSYNC_LINK_LIBRARIES ${ICONV_LIBRARIES})
 endif()
 
@@ -85,8 +85,8 @@ if (CSYNC_STATIC_COMPILE_DIR)
 endif()
 
 include_directories(
-  ${CSYNC_PUBLIC_INCLUDE_DIRS}
-  ${CSYNC_PRIVATE_INCLUDE_DIRS}
+  ${CSYNC_SRC_PUBLIC_INCLUDE_DIRS}
+  ${CSYNC_SRC_PRIVATE_INCLUDE_DIRS}
 )
 
 add_library(${CSYNC_LIBRARY} SHARED ${csync_SRCS})
