mark all libs for ocsync as private

--- a/csync/src/CMakeLists.txt
+++ b/csync/src/CMakeLists.txt
@@ -22,8 +22,10 @@ set(CSYNC_LIBRARY
   CACHE INTERNAL "ocsync library"
 )
 
-set(CSYNC_LINK_LIBRARIES
-  ${CSYNC_LIBRARY}
+set(CSYNC_PUBLIC_LINK_LIBRARIES
+)
+
+set(CSYNC_PRIVATE_LINK_LIBRARIES
   ${CSTDLIB_LIBRARY}
   ${CSYNC_REQUIRED_LIBRARIES}
   ${SQLITE3_LIBRARIES}
@@ -33,7 +35,7 @@ set(CSYNC_LINK_LIBRARIES
 
 if(HAVE_ICONV AND WITH_ICONV)
     list(APPEND CSYNC_SRC_PRIVATE_INCLUDE_DIRS ${ICONV_INCLUDE_DIR})
-    list(APPEND CSYNC_LINK_LIBRARIES ${ICONV_LIBRARIES})
+    list(APPEND CSYNC_PRIVATE_LINK_LIBRARIES ${ICONV_LIBRARIES})
 endif()
 
 set(BLACKLIST_ON_ERROR 0 CACHE BOOL
@@ -91,7 +93,12 @@ include_directories(
 
 add_library(${CSYNC_LIBRARY} SHARED ${csync_SRCS})
 
-target_link_libraries(${CSYNC_LINK_LIBRARIES})
+target_link_libraries(${CSYNC_LIBRARY}
+   PUBLIC
+      ${CSYNC_PUBLIC_LINK_LIBRARIES}
+   PRIVATE
+      ${CSYNC_PRIVATE_LINK_LIBRARIES}
+)
 
 set_target_properties(
   ${CSYNC_LIBRARY}
