--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,7 @@
-include_directories(${CMAKE_BINARY_DIR}/csync ${CMAKE_BINARY_DIR}/csync/src ${CMAKE_BINARY_DIR}/src)
-include_directories(${CMAKE_SOURCE_DIR}/csync/src/ ${CMAKE_SOURCE_DIR}/csync/src/httpbf/src)
+include_directories(
+   ${CMAKE_BINARY_DIR}/src
+   ${CSYNC_PUBLIC_INCLUDE_DIRS}
+)
 include(owncloud_add_test.cmake)
 
 owncloud_add_test(OwncloudPropagator)
