--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,7 @@
+IF(CMAKE_VERSION VERSION_GREATER "2.8.11")
+   CMAKE_POLICY(SET CMP0022 OLD)
+ENDIF()
+
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
 
 qt_add_resources(MIRALL_RC_SRC ../mirall.qrc)
@@ -179,10 +183,9 @@ IF (NOT APPLE)
     )
 ENDIF(NOT APPLE)
 
-list(APPEND libsync_LINK_TARGETS
-    ${QT_LIBRARIES}
-    ocsync
-    httpbf
+set(libsync_LINK_TARGETS
+    ${HTTPBF_LIBRARY}
+    ${CSYNC_LIBRARY}
     ${OS_SPECIFIC_LINK_LIBRARIES}
 )
 
@@ -204,13 +207,16 @@ endif()
 add_library(${OWNCLOUDSYNC_LIBRARY} SHARED ${libsync_SRCS} ${syncMoc})
 
 qt5_use_modules(${OWNCLOUDSYNC_LIBRARY} Widgets Network Xml WebKitWidgets Sql)
+qt4_use_modules(${OWNCLOUDSYNC_LIBRARY} Gui Core Network WebKit Sql)
+
+target_link_libraries(${OWNCLOUDSYNC_LIBRARY} ${libsync_LINK_TARGETS} )
 
 set_target_properties( ${OWNCLOUDSYNC_LIBRARY}  PROPERTIES
 	VERSION ${MIRALL_VERSION}
 	SOVERSION ${MIRALL_SOVERSION}
+   LINK_INTERFACE_LIBRARIES ""
 )
 
-target_link_libraries(${OWNCLOUDSYNC_LIBRARY} ${libsync_LINK_TARGETS} )
 
 if(NOT BUILD_OWNCLOUD_OSX_BUNDLE)
     install(TARGETS ${OWNCLOUDSYNC_LIBRARY}
@@ -384,7 +390,6 @@ endif(NOT WIN32)
 
     # add_executable( ${APPLICATION_EXECUTABLE} main.cpp ${final_src})
     add_executable( ${APPLICATION_EXECUTABLE} WIN32 main.cpp ${final_src})
-    qt5_use_modules(${APPLICATION_EXECUTABLE} Widgets Network Xml WebKitWidgets Sql ${ADDITIONAL_APP_MODULES})
 else()
     set(BIN_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
     include(DeployQt4)
@@ -394,7 +399,6 @@ else()
 
     # we must add MACOSX_BUNDLE only if building a bundle
     add_executable( ${APPLICATION_EXECUTABLE} WIN32 MACOSX_BUNDLE main.cpp ${final_src})
-    qt5_use_modules(${APPLICATION_EXECUTABLE} Widgets Network Xml WebKitWidgets Sql  ${ADDITIONAL_APP_MODULES})
 
     set (QM_DIR ${OWNCLOUD_OSX_BUNDLE}/Contents/Resources/Translations)
     install(FILES ${mirall_I18N} DESTINATION ${QM_DIR})
@@ -411,10 +415,14 @@ qt5_use_modules(updater Widgets Network Xml)
 set_target_properties( ${APPLICATION_EXECUTABLE} PROPERTIES
         RUNTIME_OUTPUT_DIRECTORY  ${BIN_OUTPUT_DIRECTORY}
 )
-target_link_libraries( ${APPLICATION_EXECUTABLE} ${QT_LIBRARIES} )
-target_link_libraries( ${APPLICATION_EXECUTABLE} ${OWNCLOUDSYNC_LIBRARY} )
-target_link_libraries( ${APPLICATION_EXECUTABLE} updater )
-target_link_libraries( ${APPLICATION_EXECUTABLE} ${OS_SPECIFIC_LINK_LIBRARIES} )
+
+qt5_use_modules(${APPLICATION_EXECUTABLE} Widgets Network Xml WebKitWidgets Sql  ${ADDITIONAL_APP_MODULES})
+qt4_use_modules(${APPLICATION_EXECUTABLE} Core Gui Network Xml ${ADDITIONAL_APP_MODULES})
+target_link_libraries( ${APPLICATION_EXECUTABLE}
+   ${OWNCLOUDSYNC_LIBRARY}
+   updater
+   ${OS_SPECIFIC_LINK_LIBRARIES}
+)
 
 install(TARGETS ${APPLICATION_EXECUTABLE}
         RUNTIME DESTINATION bin
@@ -444,9 +452,16 @@ set(owncloudcmd_NAME ${APPLICATION_EXECUTABLE}cmd)
 set(OWNCLOUDCMD_SRC owncloudcmd/owncloudcmd.cpp)
 add_executable(${owncloudcmd_NAME}  ${OWNCLOUDCMD_SRC})
 qt5_use_modules(${owncloudcmd_NAME} Network Sql)
+qt4_use_modules(${owncloudcmd_NAME} Core)
+
 set_target_properties(${owncloudcmd_NAME} PROPERTIES
 	        RUNTIME_OUTPUT_DIRECTORY  ${BIN_OUTPUT_DIRECTORY} )
-target_link_libraries(${owncloudcmd_NAME} ${OWNCLOUDSYNC_LIBRARY})
+target_link_libraries(${owncloudcmd_NAME}
+   ${OWNCLOUDSYNC_LIBRARY}
+   ${CSYNC_LIBRARY}
+   ${NEON_LIBRARIES}
+   ${OS_SPECIFIC_LINK_LIBRARIES}
+)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/mirall)
 if(BUILD_OWNCLOUD_OSX_BUNDLE)
     install(TARGETS ${owncloudcmd_NAME} DESTINATION ${OWNCLOUD_OSX_BUNDLE}/Contents/MacOS)
