--- a/cmake/modules/NSIS.template.in
+++ b/cmake/modules/NSIS.template.in
@@ -667,7 +667,9 @@ Section Uninstall
    !ifdef OPTION_SECTION_SC_DESKTOP
       ${If} ${HasSection} SEC_DESKTOP
          ${If} ${FileExists} "$DESKTOP\${APPLICATION_NAME}.lnk"
+            SetShellVarContext all
             Delete "$DESKTOP\${APPLICATION_NAME}.lnk"
+            SetShellVarContext current
          ${EndIf}
       ${EndIf}
    !endif
@@ -676,7 +678,9 @@ Section Uninstall
    !ifdef OPTION_SECTION_SC_QUICK_LAUNCH
       ${If} ${HasSection} SEC_QUICK_LAUNCH
          ${If} ${FileExists} "$QUICKLAUNCH\${APPLICATION_NAME}.lnk"
+            SetShellVarContext all
             Delete "$QUICKLAUNCH\${APPLICATION_NAME}.lnk"
+            SetShellVarContext current
          ${EndIf}
       ${EndIf}
    !endif
