Find & use QtConcurrent

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -174,9 +174,9 @@ GENERATE_EXPORT_HEADER( ${synclib_NAME}
 
 
 if(TOKEN_AUTH_ONLY)
-    qt5_use_modules(${synclib_NAME} Network Xml Sql)
+    qt5_use_modules(${synclib_NAME} Network Xml Sql Concurrent)
 else()
-    qt5_use_modules(${synclib_NAME} Widgets Network Xml WebKitWidgets Sql)
+    qt5_use_modules(${synclib_NAME} Widgets Network Xml WebKitWidgets Sql Concurrent)
 endif()
 
 set_target_properties( ${synclib_NAME}  PROPERTIES
