Untangle csync headers
- installs headers for non-osx bundles
- also installs csync_private.h, since it's needed in the owncloud
  client (this is a sign that it warrants rethinking the public API, and
  what's supposed to be private, and why.
- include csync_private.h from csync.h

This allows to remove the private includes, and will make it possible to
merge these headers later on without breaking includes. It's a bit of a
hack, but makes the separation a bit cleaner.

--- a/csync/src/CMakeLists.txt
+++ b/csync/src/CMakeLists.txt
@@ -73,9 +73,7 @@ configure_file(csync_version.h.in ${CMAKE_CURRENT_BINARY_DIR}/csync_version.h)
 set(csync_HDRS
   ${CMAKE_CURRENT_BINARY_DIR}/csync_version.h
   csync.h
-  vio/csync_vio.h
-  vio/csync_vio_method.h
-  vio/csync_vio_module.h
+  csync_private.h
 )
 
 # Statically include sqlite
@@ -126,12 +124,12 @@ else()
   RUNTIME DESTINATION
     ${BIN_INSTALL_DIR}/${APPLICATION_EXECUTABLE}
   )
+  INSTALL(
+  FILES
+    ${csync_HDRS}
+  DESTINATION
+    ${INCLUDE_INSTALL_DIR}/${APPLICATION_NAME}
+  )
 endif()
 
-# INSTALL(
-#   FILES
-#     ${csync_HDRS}
-#   DESTINATION
-#     ${INCLUDE_INSTALL_DIR}/${APPLICATION_NAME}
-# )
 
