--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ if (APPLE)
 endif()
 
 add_subdirectory(libsync)
+add_subdirectory(libclient)
 if (NOT BUILD_LIBRARIES_ONLY)
     add_subdirectory(gui)
     add_subdirectory(cmd)
