--- a/src/libsync/CMakeLists.txt
+++ b/src/libsync/CMakeLists.txt
@@ -95,6 +95,8 @@ set(owncloudsync_HEADERS
     ownsql.h
     clientproxy.h
     accountfwd.h
+    capabilities.h
+    connectionvalidator.h
 )
 
 set(creds_HEADERS
