Move raiseDialog into its own class
This static function is needed from the credentials, which is included
in libclient. As it is the only bit from ownCloudGui that is needed in
libclient, factor it into its own mini-class containing just this
static, so it can be included in the client without pulling in all the
bits and pieces that make up ownCloudGui.

--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -60,6 +60,7 @@ set(client_SRCS
     ocsshareejob.cpp
     openfilemanager.cpp
     owncloudgui.cpp
+    windowraiser.cpp
     owncloudsetupwizard.cpp
     protocolwidget.cpp
     activitywidget.cpp
