Install ocsync so it can be more easily found
Don't install private header, it's only used at build-time now

--- a/csync/src/CMakeLists.txt
+++ b/csync/src/CMakeLists.txt
@@ -72,8 +72,8 @@ configure_file(csync_version.h.in ${CMAKE_CURRENT_BINARY_DIR}/csync_version.h)
 
 set(csync_HDRS
   ${CMAKE_CURRENT_BINARY_DIR}/csync_version.h
+  ${CMAKE_CURRENT_BINARY_DIR}/../config_csync.h
   csync.h
-  csync_private.h
 )
 
 # Statically include sqlite
@@ -102,34 +102,22 @@ set_target_properties(
       RUNTIME_OUTPUT_DIRECTORY
         ${BIN_OUTPUT_DIRECTORY}
 )
-if(BUILD_OWNCLOUD_OSX_BUNDLE)
-  INSTALL(
-    TARGETS
-      ${CSYNC_LIBRARY}
-    LIBRARY DESTINATION
-	${LIB_INSTALL_DIR}
-    ARCHIVE DESTINATION
-	${LIB_INSTALL_DIR}
-    RUNTIME DESTINATION
-	${BIN_INSTALL_DIR}
-    )
-else()
-  INSTALL(
+
+INSTALL(
   TARGETS
     ${CSYNC_LIBRARY}
   LIBRARY DESTINATION
-    ${LIB_INSTALL_DIR}/${APPLICATION_EXECUTABLE}
+    ${LIB_INSTALL_DIR}
   ARCHIVE DESTINATION
-    ${LIB_INSTALL_DIR}/${APPLICATION_EXECUTABLE}
+    ${LIB_INSTALL_DIR}
   RUNTIME DESTINATION
-    ${BIN_INSTALL_DIR}/${APPLICATION_EXECUTABLE}
+    ${BIN_INSTALL_DIR}
   )
-  INSTALL(
+INSTALL(
   FILES
     ${csync_HDRS}
   DESTINATION
     ${INCLUDE_INSTALL_DIR}/${APPLICATION_NAME}
   )
-endif()
 
 
