Initial scripting to add icon to navigation pane in windows

--- a/cmake/modules/NSIS.template.in
+++ b/cmake/modules/NSIS.template.in
@@ -11,6 +11,9 @@
 
 !define CRASHREPORTER_EXECUTABLE "@CRASHREPORTER_EXECUTABLE@"
 
+!define CLSID "{2F8BD8E0-03B3-47C5-A1E1-5C182FA6FFD0}"
+!define NavigationPaneRegKey "Software\Classes\CLSID\${CLSID}"
+
 ;-----------------------------------------------------------------------------
 ; Some installer script options (comment-out options not required)
 ;-----------------------------------------------------------------------------
@@ -583,6 +586,28 @@ Section -post
    WriteRegDWORD ${MEMENTO_REGISTRY_ROOT} "${MEMENTO_REGISTRY_KEY}" "NoModify" "1"
    WriteRegDWORD ${MEMENTO_REGISTRY_ROOT} "${MEMENTO_REGISTRY_KEY}" "NoRepair" "1"
 
+   ;Create Navigation Pane registry entry  
+   ${If} ${RunningX64}
+   	   SetRegView 64
+   ${Endif}
+   	   
+   WriteRegStr HKCU "${NavigationPaneRegKey}" "" "${APPLICATION_NAME}"
+   WriteRegExpandStr HKCU "${NavigationPaneRegKey}\DefaultIcon" "" $INSTDIR\${APPLICATION_NAME}.exe
+   WriteRegDWORD HKCU "${NavigationPaneRegKey}" "System.IsPinnedToNameSpaceTree" "1"
+   WriteRegDWORD HKCU "${NavigationPaneRegKey}" "SortOrderIndex" "66"
+   WriteRegExpandStr HKCU "${NavigationPaneRegKey}\InProcServer32" "" "%systemroot%\system32\shell32.dll"
+   WriteRegStr HKCU "${NavigationPaneRegKey}\Instance" "CLSID" "{0E5AAE11-A475-4c5b-AB00-C66DE400274E}"
+   WriteRegDWORD HKCU "${NavigationPaneRegKey}\Instance\InitPropertyBag" "Attributes" "17"
+   WriteRegExpandStr HKCU "${NavigationPaneRegKey}\Instance\InitPropertyBag" "TargetFolderPath" "%USERPROFILE%\${APPLICATION_NAME}"
+   WriteRegDWORD HKCU "${NavigationPaneRegKey}\ShellFolder" "FolderValueFlags" "40"
+   WriteRegDWORD HKCU "${NavigationPaneRegKey}\ShellFolder" "Attributes" "4034920525"
+   WriteRegStr HKCU "Software\Microsoft\Windows\CurrentVersion\Explorer\Desktop\NameSpace\${CLSID}" "" "${APPLICATION_NAME}"
+   WriteRegDWORD HKCU "Software\Microsoft\Windows\CurrentVersion\Explorer\HideDesktopIcons\NewStartPanel" "${CLSID}" "1" 
+	  
+   ${If} ${RunningX64}
+   	   SetRegView 32
+   ${Endif}
+    
 
    SetDetailsPrint textonly
    DetailPrint $UNINSTALLER_FINISHED_Detail
@@ -611,6 +636,31 @@ Section Uninstall
    DeleteRegValue HKLM "Software\${APPLICATION_VENDOR}\${APPLICATION_NAME}" "VersionRevision"
    DeleteRegValue HKLM "Software\${APPLICATION_VENDOR}\${APPLICATION_NAME}" ""
    DeleteRegKey HKLM "Software\${APPLICATION_VENDOR}\${APPLICATION_NAME}"
+   
+   ${If} ${RunningX64}
+   	   SetRegView 64
+   ${Endif}
+	   DeleteRegKey HKCU "Software\Microsoft\Windows\CurrentVersion\Explorer\Desktop\NameSpace\${CLSID}" ""
+	   DeleteRegValue HKCU "Software\Microsoft\Windows\CurrentVersion\Explorer\HideDesktopIcons\NewStartPanel" "${CLSID}"
+	   DeleteRegValue HKCU "${NavigationPaneRegKey}\DefaultIcon" ""
+	   DeleteRegKey HKCU "${NavigationPaneRegKey}\DefaultIcon"
+	   DeleteRegValue HKCU "${NavigationPaneRegKey}\InProcServer32" ""
+	   DeleteRegKey HKCU "${NavigationPaneRegKey}\InProcServer32"
+	   DeleteRegValue HKCU "${NavigationPaneRegKey}\Instance" "CLSID"
+	   DeleteRegValue HKCU "${NavigationPaneRegKey}\Instance\InitPropertyBag" "Attributes"
+	   DeleteRegValue HKCU "${NavigationPaneRegKey}\Instance\InitPropertyBag" "TargetFolderPath"
+	   DeleteRegKey HKCU "${NavigationPaneRegKey}\Instance\InitPropertyBag"
+	   DeleteRegKey HKCU "${NavigationPaneRegKey}\Instance"
+	   DeleteRegValue HKCU "${NavigationPaneRegKey}\ShellFolder" "FolderValueFlags"
+	   DeleteRegValue HKCU "${NavigationPaneRegKey}\ShellFolder" Attributes"
+	   DeleteRegKey HKCU "${NavigationPaneRegKey}\ShellFolder"
+	   DeleteRegValue HKCU "${NavigationPaneRegKey}" "System.IsPinnedToNameSpaceTree"
+	   DeleteRegValue HKCU "${NavigationPaneRegKey}" "SortOrderIndex"
+	   DeleteRegValue HKCU "${NavigationPaneRegKey}" ""
+	   DeleteRegKey HKCU "${NavigationPaneRegKey}"
+   ${If} ${RunningX64}
+   	   SetRegView 32
+   ${Endif}
 
    DeleteRegKey HKCR "${APPLICATION_NAME}"
 
